2006-07-30  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Don't use our own hash function, the one from the ZE is extremely much
          faster and provides a much better distribution.
        * Don't compile the user cache code one no feature is being compiled.
        * A big cleanup in struct naming
        * Move some functions around to make more of them static, this reduces
          the binary size and load times.
        * Remove some leftovers from restoring encoded scripts which only create
          overhead without the loader.
        * Clean up the session handler, removed old code for php < 4.3. 
        * Fixed detection of SysV IPC shared memory and made anonymous mmap 
          the first selected type. This makes the behaviour of rc1 the 
          default. anonymous mmap doens't have the problem of shmmax. SysVIPC is 
          still available!
        * Fixed some of the detection test in the configure script that probably
          never worked.

2006-07-29  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Use php realpath directly without wrapper, TSRM implements the realpath cache

2006-07-28  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Restore the class entry of zend_property_info when using php 5.2, this fixes bug #151

2006-07-27  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Branched 0.9.5, development for 0.9.6 will start in trunk
        * Bumped up version to 0.9.6-dev
        * Killing the very broken encoder. Once when eAccelerator is in full
          shape an encoder may return.
        * Some fixes to make eAccelerator compile with php 5.2, this fixes bug #150
        * Restore __toString methods correctly with php 5.2
        * Fix bug #145, objects are serialized when they are stored in shared memory.
          Users don't have to do this in their code anymore.
        * Wrong ifdef in compile fix for php 5.2
        * Update config.w32, VC6 and VC2005 project files